Disabled overflow on X axis to prevent horizontal scroll

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,7 @@ body {
   font-weight: 400;
   font-style: normal;
   font-family: "Source Sans 3", sans-serif;
+  overflow-x: hidden;
   background: var(--main-bg-color);
 }
 
